/m page: fix collapsing margins and add privacy policy link (bug 642342)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@86634 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/tignish/mobile-m.css
+++ b/style/tignish/mobile-m.css
@@ -195,6 +195,10 @@ p.button strong {
     padding: 0 1em;
 }
 
+#header {
+    padding-bottom: 1px; /* to fix collapsing margins */
+}
+
 #header .logo {
     float: left;
     width: 150px;
@@ -545,6 +549,10 @@ a.button-beta {
 }
 
 /* footer */
+
+#footer {
+    padding-bottom: 1px; /* to fix collapsing margins */
+}
 
 #footer p {
     font-family:helvetica,arial,clean,sans-serif;
